--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 :root{ /* default scope */
     --main-color:#1C2431;
     --secondary-color: #3857BA;
-    --secondary-darker-color: #425574;
+    --secondary-darker-color: hsl(218, 28%, 13%);
     --details-color: #CBAB60;
     --gray-color: #b9b9b9;
     --text-color: #fff;
@@ -23,10 +23,14 @@ html {
 body {
     font-family: 'Poppins', sans-serif;
     margin:0;
-    overflow: hidden; /* no scrollbars */
+    overflow-x: hidden; /* no scrollbars */
     background-color: var(--main-color);
     color:var(--text-color);
     font-size: 1.6em;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 ul {
@@ -59,9 +63,25 @@ h2 {
     font-size: 2em;
 }
 
-/* header */
 .container {
     margin: 1rem 3rem;
+    max-width: 1100px;
+}
+
+section {
+    padding: 6rem 0;
+}
+
+
+/* header */
+header{
+    height: 100vh;
+    text-align: center;
+    position: relative;
+    background: url(/assets/bg-curvy-mobile.svg);
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 nav {
@@ -75,25 +95,17 @@ nav button i {
     color: var(--text-color);
 }
 
-/* main */
-main {
-    position: relative;
-}
 
+/* intro */
 .intro {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    display: grid;
     justify-content: space-evenly;
-    align-content: space-around;
-    position: relative;
+    place-items: center;
+    gap: 2.5em;
 }
 
 .intro_image {
-    width: 100vw;
+    width: 100vw; /* take full width on mobile */
 }
 
 .intro p {
@@ -101,23 +113,104 @@ main {
     font-weight: 500;
 }
 
-main svg {
-    position: absolute;
-    top: 65vh;
-    left: 50%;
-    transform: translateX(-50%);
+#scroll-down-btn {
     cursor: pointer;
     width: 280px;
     height: auto;
+    position: absolute;
+    top:80vh;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#scroll-down-btn:after {
+    content:'';
+    clear: both;
 }
 
-main svg #led-color,
-main svg:visited #led-color {
+
+#scroll-down-btn #led-color,
+#scroll-down-btn:visited #led-color {
     fill: #959595;
-    transition: fill 0.4s ease-in-out;
+    transition: fill 0.3s ease-in-out;
+}
+#scroll-down-btn:hover #led-color,
+#scroll-down-btn:active #led-color {
+    fill: #50AB66;
 }
 
-main svg:hover #led-color,
-main svg:active #led-color {
-    fill: #50AB66;
+
+/* features */
+section.features{
+    background-color: var(--secondary-darker-color);
+    padding: 10rem 0;
+}
+
+section.features article {
+    margin-bottom: 10rem;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+}
+
+.features_circleimg{
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    border: 5px solid var(--secondary-color);
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.features-1 {
+    background-image: url('assets/schematics.png');
+}
+
+.features-2 {
+    background-image: url('https://images.unsplash.com/photo-1555589228-135c25ae8cf5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+}
+
+.features_body {
+    text-align: center;
+}
+
+
+
+@media (min-width: 576px) {
+    .intro_image {
+        max-width: 550px;
+    }
+}
+
+@media(min-width: 768px) {
+    .container {
+        margin: 3rem 6rem;
+    }
+
+    .intro {
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content:space-around;
+        text-align: left;
+        margin-top: 15rem;
+    }
+
+    .intro_image {
+        max-width: 100%;
+        order:1;
+    }
+
+}
+
+@media(min-width: 992px) {
+
+
+}
+
+@media(min-width: 1200px) {
+
+    .container {
+        margin: 3rem auto;
+    }
 }
