--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 :root{ /* default scope */
     --main-color:#1C2431;
     --secondary-color: #3857BA;
-    --secondary-darker-color: hsl(218, 28%, 13%);
+    --secondary-darker-color: #181f2a;
     --details-color: #CBAB60;
     --gray-color: #b9b9b9;
     --text-color: #fff;
@@ -63,6 +63,17 @@ h2 {
     font-size: 2em;
 }
 
+h3 {
+    font-weight: 700;
+    font-size: 1.8em;
+    text-align: center;
+    margin-bottom: 10rem;
+}
+
+p{
+    font-weight: 200;
+}
+
 .container {
     margin: 1rem 3rem;
     max-width: 1100px;
@@ -78,7 +89,7 @@ header{
     height: 100vh;
     text-align: center;
     position: relative;
-    background: url(/assets/bg-curvy-mobile.svg);
+    background-image: url("assets/bg-intro-mobile.svg");
     background-position-y: bottom;
     background-repeat: no-repeat;
     background-size: contain;
@@ -118,7 +129,7 @@ nav button i {
     width: 280px;
     height: auto;
     position: absolute;
-    top:80vh;
+    top:75vh;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -141,7 +152,8 @@ nav button i {
 
 /* features */
 section.features{
-    background-color: var(--secondary-darker-color);
+    background: var(--secondary-darker-color);
+    /* background: linear-gradient(0deg, rgba(28,36,49,1)  0%, rgba(24,31,42,1) 100%); */
     padding: 10rem 0;
 }
 
@@ -168,12 +180,93 @@ section.features article {
 }
 
 .features-2 {
-    background-image: url('https://images.unsplash.com/photo-1555589228-135c25ae8cf5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+    background-image: url('assets/route_pcb.jpg');
+}
+
+.features-3 {
+    background-image: url('assets/fab_pcb.jpg');
 }
 
 .features_body {
     text-align: center;
 }
+
+ul.tags{
+    margin-top: 4rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+ul.tags li{
+    padding: 2px 10px;
+    background-color: #3857BA;
+    border-radius: 5px;
+    font-size: 1.4rem;
+}
+
+
+/* technologies */
+.technologies-cards {
+    display: grid;
+    justify-items: center;
+    row-gap: 10rem;
+    position: relative;
+}
+.technologies-cards::after { /* line behind */
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 90%;
+    top:20px;
+    z-index: 0;
+    background-color: var(--details-color);
+}
+
+.technologies-card{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    width: 100%;
+    max-width: 35rem;
+    background-color: var(--secondary-color);
+    border-radius: 0.5rem;
+}
+
+.technologies-card_icon{
+    width: 8rem;
+    height: 8rem;
+    position: absolute;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    top: -4rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.technologies-card_icon svg {
+    width: 4rem;
+    height: 4rem;
+    fill: var(--main-color);
+}
+
+.technologies-card_inside {
+    width: 100%;
+    padding: 4rem 3rem;
+    text-align: center;
+}
+
+
+/* footer */
+footer {
+    background-color: var(--secondary-color);
+}
+
 
 
 
@@ -186,6 +279,10 @@ section.features article {
 @media(min-width: 768px) {
     .container {
         margin: 3rem 6rem;
+    }
+
+    header {
+        background-image: url("assets/bg-intro-desktop.svg");
     }
 
     .intro {
