--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button:focus {
     outline: none;
 }
 
-h1,h2,h3 {
+h1,h2,h3,h4 {
     font-family: 'Quantico', sans-serif;
 }
 
@@ -60,18 +60,18 @@ h1 {
 
 h2 {
     font-weight: 700;
-    font-size: 2em;
+    font-size: 2.2em;
 }
 
 h3 {
     font-weight: 700;
-    font-size: 1.8em;
+    font-size: 2em;
     text-align: center;
     margin-bottom: 4rem;
 }
 
 h4 {
-    font-size: 1.1em;
+    font-size: 1.3em;
     font-weight: 500;
     margin-bottom: 3rem;
 }
@@ -195,15 +195,13 @@ section.features{
 }
 
 section.features article {
-    margin: 0 auto;
-    margin-bottom: 10rem;
-    display: flex;
-    flex-direction: column;
+    margin: 5rem 0;
+    padding: 5rem;
+    display: grid;
+    
     place-items: center;
-    max-width: 80rem;
     border-radius: 15px;
-    /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.4); */
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.445);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 .features_circleimg{
@@ -475,6 +473,30 @@ footer {
     }
     .intro_text .subtitle{
         text-align:left;
+    }
+
+    /* Expertise */
+    section.features article {
+        grid-template-columns: 1fr 2fr; 
+        justify-items: start;
+        column-gap: 2em;
+    }
+    section.features article:nth-of-type(even) {
+        grid-template-columns: 2fr 1fr; 
+        justify-items: end;
+    }
+
+    article .features_circleimg {
+        grid-row: 1 / 3;
+    }
+    article:nth-of-type(even) .features_circleimg {
+        grid-column: 2;
+    }
+    article:nth-of-type(odd) .tags {
+        grid-column: 2;
+    }
+    .features_body {
+        text-align: left;
     }
 
     /* Technologies */
