--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 html {
     font-size: 62.5%; /* easy to calculate em (10px instead of 16px) */
+    scroll-behavior: smooth;
 }
 
 body {
@@ -111,8 +112,8 @@ section {
     border-radius: .5rem;
     line-height: 2.8rem;
     padding: .8rem 2rem;
+    color:var(--text-color);
     font-size: 1.4rem;
-    color: var(--text-color);
     box-shadow: 0 0.8rem 0.8rem -0.5rem rgb(73, 93, 207 , 0.2);
     transition: background-color 0.3s ease-in-out;
 }
@@ -121,31 +122,120 @@ section {
     background-color: transparent;
 }
 
-/* header */
-header{
-    height: 100vh;
-    text-align: center;
-    position: relative;
+.sine-wave {
     background-image: url("assets/bg-intro-mobile.svg");
     background-position-y: bottom;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
+
+/* header */
+header{
+    height: 100vh;
+    text-align: center;
+    position: relative;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
+    position: relative;
+    
 }
 
-nav button i {
-    font-size: 2.5em;
+.nav-btn {
+    font-size: 2.3em;
     color: var(--text-color);
 }
 
+#collapse {
+    display: block;
+}
+.nav-link {
+    display: none;
+}
+
+.nav {
+    position: fixed;
+    top:0;
+    right:0;
+    height: 100vh;
+    transform: translateX(100%); /* off the screen to the right*/
+    transition: transform .3s ease-in-out;
+    border-left: 2px solid var(--secondary-darker-color);
+    z-index: 100;
+}
+.nav.visible {
+    transform: translateX(0);
+}
+
+.nav-blue {
+    background-color: var(--secondary-color);
+    width: 60%;
+    max-width: 480px;
+    min-width: 320px;
+    transition-delay: .2s;
+}
+
+.nav-blue.visible {/* when it opense */
+    transition-delay: 0s;
+}
+
+.nav-dark {
+    background-color: var(--secondary-darker-color);
+    width: 95%; /* 95% inside nav-black */
+    transition-delay: 0;
+}
+
+.nav-dark.visible { /* when it opense */
+    transition-delay: .2s;
+}
+
+.close-btn {
+    position: absolute;
+    top: 4rem;
+    right: 4rem;
+}
+
+.menu {
+    margin-top: 20rem;
+}
+
+.menu li {
+    margin: 6rem 0;
+}
+
+.menu_link:link,
+.menu_link:visited {
+    color: var(--text-color);
+    font-size: 1.1em;
+    font-family: 'Quantico', sans-serif;
+    text-decoration: none;
+    transition: color .1s ease-in;
+    position: relative;
+}
+
+.menu_link:hover,
+.menu_link:active  {
+    color: var(--secondary-color);
+}
+
+.menu_link:hover::after  {
+    content: '';
+    position: absolute;
+    height: 0.2rem;
+    width: 90%;
+    top:3rem;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--secondary-color);
+}
 
 /* intro */
-.intro {
+#intro {
     display: grid;
     justify-content: space-evenly;
     place-items: center;
@@ -188,13 +278,13 @@ nav button i {
 
 
 /* features */
-section.features{
+#features{
     background: var(--secondary-darker-color);
     /* background: linear-gradient(0deg, rgba(28,36,49,1)  0%, rgba(24,31,42,1) 100%); */
     padding: 10rem 0;
 }
 
-section.features article {
+#features article {
     margin: 5rem 0;
     padding: 5rem;
     display: grid;
@@ -249,7 +339,7 @@ ul.tags li{
     padding: 2px 10px;
     background-color: #3857BA;
     border-radius: 0.5rem;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
 }
 
 
@@ -318,10 +408,10 @@ ul.tags li{
 
 
 /* More services */
-.more {
+#more {
     position: relative;
 }
-.more::after {
+#more::after {
     content: '';
     position: absolute;
     width: 60%;
@@ -376,7 +466,12 @@ ul.tags li{
 
 .more-services__content {
     text-align: center;
-    animation: fadeIn 0.5s;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.more-services__content.show{
+    opacity: 1;
 }
 
 .more-services__image {
@@ -387,9 +482,6 @@ ul.tags li{
     width: 100%;
 }
 
-.more-services__content.fadeout {
-    animation: fadeOut .5s;
-}
 
 .more-services__details {
     margin-bottom: 5rem;
@@ -402,8 +494,22 @@ footer {
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
+.footer-flex {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    gap: 2em;
+}
+
+.footer-link {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
 
 .copyright {
+    margin-top: 5rem;
     font-size: 1.3rem;
     text-align: center;
 }
@@ -417,31 +523,10 @@ footer {
     }
     100%{
         opacity:1;
-        width:14.3rem
+        width:14rem
     }
 }
 
-@keyframes fadeIn {
-    0% {
-        opacity:0;
-        transform:translateX(-10rem)
-    }
-    100% {
-        opacity:1;
-        transform:translateX(0)
-    }
-}
-
-@keyframes fadeOut {
-    0% { 
-        opacity: 1; 
-        transform: translateX(0); 
-    }
-    100% { 
-        opacity: 0; 
-        transform: translateX(-10rem); 
-    }
-}
 
 
 @media (min-width: 576px) {
@@ -455,11 +540,11 @@ footer {
         margin: 3rem 6rem;
     }
 
-    header {
+    .sine-wave {
         background-image: url("assets/bg-intro-desktop.svg");
     }
 
-    .intro {
+    #intro {
         grid-auto-flow: column;
         align-items: center;
         justify-content:space-around;
@@ -476,14 +561,12 @@ footer {
     }
 
     /* Expertise */
-    section.features article {
+    #features article {
         grid-template-columns: 1fr 2fr; 
-        justify-items: start;
         column-gap: 2em;
     }
-    section.features article:nth-of-type(even) {
+    #features article:nth-of-type(even) {
         grid-template-columns: 2fr 1fr; 
-        justify-items: end;
     }
 
     article .features_circleimg {
@@ -522,8 +605,63 @@ footer {
 
 @media(min-width: 992px) {
 
-    .more-services li.active-service::after {
+    #collapse {
+        display: none;
+    }
+    .nav-link {
+        display: flex;
+        column-gap: 2em;
+    }
+
+    #more::after {
+        width: 40%;
+        height: 25rem;
+        
+    }
+
+    .more-services__selectors li.active-service::after {
         width: 24rem;
+        animation: increaseLine .3s;
+    }
+
+    .more-services__selectors ul {
+        display: inline-flex;
+        width: 80%;
+        max-width: 80rem;
+        justify-content: space-between;
+        margin: 0 auto;
+        border-bottom: 1px solid rgba(136, 136, 136, 0.69);
+        padding: 0 5rem;
+    }
+    .more-services__selectors li {
+        border-top: none;
+        padding-bottom: 3rem;
+    }
+    .more-services__selectors li:last-of-type {
+        border-bottom: none;
+    }
+
+    .more-services__content {
+        display: grid;
+        grid-auto-flow: column; 
+        grid-template-columns: 55rem 1fr;
+        column-gap: 2em;
+        text-align: left;
+    }
+    .more-services__image {
+        width: 100%;
+        margin: 0;
+    }
+
+    .footer-flex {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .footer-link {
+        display: flex;
+        flex-direction: row;
+        gap:2em;
     }
 
     @keyframes increaseLine {
