--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Quantico:wght@400;700&family=Poppins:wght@200;400;500&display=swap');
 
 
-*, 
-*::before, 
-*::after  {
-    box-sizing: border-box; /* does not affect the width when setting padding or margin */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    /* does not affect the width when setting padding or margin */
 }
 
-:root{ /* default scope */
-    --main-color:#1C2431;
+:root {
+    /* default scope */
+    --main-color: #1C2431;
     --secondary-color: #3857BA;
     --secondary-darker-color: #181f2a;
     --details-color: #CBAB60;
@@ -17,16 +19,18 @@
 }
 
 html {
-    font-size: 62.5%; /* easy to calculate em (10px instead of 16px) */
+    font-size: 62.5%;
+    /* easy to calculate em (10px instead of 16px) */
     scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
-    margin:0;
-    overflow-x: hidden; /* no scrollbars */
+    margin: 0;
+    overflow-x: hidden;
+    /* no scrollbars */
     background-color: var(--main-color);
-    color:var(--text-color);
+    color: var(--text-color);
     font-size: 1.6em;
 }
 
@@ -45,11 +49,15 @@ button {
     background: none;
     border: 0;
 }
+
 button:focus {
     outline: none;
 }
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
     font-family: 'Quantico', sans-serif;
 }
 
@@ -68,7 +76,7 @@ h3 {
     font-weight: 700;
     font-size: 2em;
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 7rem;
 }
 
 h4 {
@@ -77,15 +85,16 @@ h4 {
     margin-bottom: 3rem;
 }
 
-p{
+p {
     font-weight: 200;
     font-size: 1.5rem;
 }
 
-a{
+a {
     text-decoration: none;
     background: none;
     outline: none;
+    color: var(--secondary-color);
 }
 
 svg {
@@ -97,9 +106,10 @@ svg {
 .subtitle {
     color: var(--gray-color);
     font-weight: 500;
-    margin-bottom: 10rem;
+    margin: 0 auto 10rem;
     text-align: center;
     font-size: 1.6rem;
+    max-width: 90rem;
 }
 
 .container {
@@ -108,7 +118,7 @@ svg {
 }
 
 section {
-    padding: 6rem 0;
+    padding: 6rem 0 10rem;
 }
 
 .btn_info {
@@ -117,9 +127,9 @@ section {
     border-radius: .5rem;
     line-height: 2.8rem;
     padding: .8rem 2rem;
-    color:var(--text-color);
+    color: var(--text-color);
     font-size: 1.4rem;
-    box-shadow: 0 0.8rem 0.8rem -0.5rem rgb(73, 93, 207 , 0.2);
+    box-shadow: 0 0.8rem 0.8rem -0.5rem rgb(73, 93, 207, 0.2);
     transition: background-color 0.3s ease-in-out;
 }
 
@@ -136,7 +146,7 @@ section {
 
 
 /* header */
-header{
+header {
     height: 100vh;
     text-align: center;
     position: relative;
@@ -152,8 +162,8 @@ nav {
 
 nav.active {
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     right: 0;
     background-color: var(--main-color);
     line-height: 0.4;
@@ -171,20 +181,23 @@ nav.active {
 #collapse {
     display: block;
 }
+
 .nav-link {
     display: none;
 }
 
 .nav {
     position: fixed;
-    top:0;
-    right:0;
+    top: 0;
+    right: 0;
     height: 100vh;
-    transform: translateX(100%); /* off the screen to the right*/
+    transform: translateX(100%);
+    /* off the screen to the right*/
     transition: transform .3s ease-in-out;
     border-left: 2px solid var(--secondary-darker-color);
     z-index: 100;
 }
+
 .nav.visible {
     transform: translateX(0);
 }
@@ -197,17 +210,20 @@ nav.active {
     transition-delay: .2s;
 }
 
-.nav-blue.visible {/* when it opense */
+.nav-blue.visible {
+    /* when it opense */
     transition-delay: 0s;
 }
 
 .nav-dark {
     background-color: var(--secondary-darker-color);
-    width: 95%; /* 95% inside nav-black */
+    width: 95%;
+    /* 95% inside nav-black */
     transition-delay: 0;
 }
 
-.nav-dark.visible { /* when it opense */
+.nav-dark.visible {
+    /* when it opense */
     transition-delay: .2s;
 }
 
@@ -236,16 +252,16 @@ nav.active {
 }
 
 .menu_link:hover,
-.menu_link:active  {
+.menu_link:active {
     color: var(--secondary-color);
 }
 
-.menu_link:hover::after  {
+.menu_link:hover::after {
     content: '';
     position: absolute;
     height: 0.2rem;
     width: 90%;
-    top:3rem;
+    top: 3rem;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -261,7 +277,8 @@ nav.active {
 }
 
 .intro_image {
-    width: 100vw; /* take full width on mobile */
+    width: 100vw;
+    /* take full width on mobile */
 }
 
 .intro_text {
@@ -274,12 +291,13 @@ nav.active {
     width: 280px;
     height: auto;
     position: absolute;
-    top:80vh;
+    top: 80vh;
     left: 50%;
     transform: translateX(-50%);
 }
+
 #scroll-down-btn:after {
-    content:'';
+    content: '';
     clear: both;
 }
 
@@ -289,6 +307,7 @@ nav.active {
     fill: #959595;
     transition: fill 0.3s ease-in-out;
 }
+
 #scroll-down-btn:hover #led-color,
 #scroll-down-btn:active #led-color {
     fill: #50AB66;
@@ -296,7 +315,7 @@ nav.active {
 
 
 /* features */
-#features{
+#features {
     background: var(--secondary-darker-color);
     /* background: linear-gradient(0deg, rgba(28,36,49,1)  0%, rgba(24,31,42,1) 100%); */
     padding: 10rem 0;
@@ -312,7 +331,7 @@ nav.active {
     position: relative;
 }
 
-.features_circleimg{
+.features_circleimg {
     width: 20rem;
     height: 20rem;
     border-radius: 50%;
@@ -336,7 +355,7 @@ nav.active {
 }
 
 .features-4 {
-    background-image: url('assets/Capture.PNG');
+    background-image: url('assets/logiciel.PNG');
     background-position: left;
 }
 
@@ -344,7 +363,7 @@ nav.active {
     text-align: center;
 }
 
-ul.tags{
+ul.tags {
     margin-top: 4rem;
     width: 100%;
     display: flex;
@@ -353,7 +372,7 @@ ul.tags{
     gap: 2rem;
 }
 
-ul.tags li{
+ul.tags li {
     padding: 2px 10px;
     background-color: #3857BA;
     border-radius: 0.5rem;
@@ -368,17 +387,19 @@ ul.tags li{
     row-gap: 10rem;
     position: relative;
 }
-.technologies-cards::after { /* line behind */
+
+.technologies-cards::after {
+    /* line behind */
     content: '';
     position: absolute;
     width: 1rem;
     height: 90%;
-    top:1rem;
+    top: 1rem;
     z-index: 0;
     background-color: var(--details-color);
 }
 
-.technologies-card{
+.technologies-card {
     position: relative;
     z-index: 1;
     display: flex;
@@ -388,7 +409,7 @@ ul.tags li{
     border-radius: 0.5rem;
 }
 
-.technologies-card_icon{
+.technologies-card_icon {
     width: 8rem;
     height: 8rem;
     position: absolute;
@@ -429,14 +450,15 @@ ul.tags li{
 #more {
     position: relative;
 }
+
 #more::after {
     content: '';
     position: absolute;
     width: 60%;
     height: 15rem;
     left: 0;
-    top:70rem;
-    z-index:-2;
+    top: 70rem;
+    z-index: -2;
     background-color: var(--details-color);
     border-top-right-radius: 20rem;
     border-bottom-right-radius: 20rem;
@@ -456,6 +478,7 @@ ul.tags li{
     border-top: 1px solid rgba(136, 136, 136, 0.69);
     transition: color 0.3s ease-in-out;
 }
+
 .more-services__selectors li:last-of-type {
     border-bottom: 1px solid rgba(136, 136, 136, 0.69);
 }
@@ -465,9 +488,10 @@ ul.tags li{
 }
 
 .more-services__selectors li.active-service {
-    color:var(--text-color);
+    color: var(--text-color);
     position: relative;
 }
+
 .more-services__selectors li.active-service::after {
     content: '';
     position: absolute;
@@ -487,7 +511,7 @@ ul.tags li{
     transition: opacity 0.3s ease-in-out;
 }
 
-.more-services__content.show{
+.more-services__content.show {
     opacity: 1;
 }
 
@@ -495,6 +519,7 @@ ul.tags li{
     max-width: 55rem;
     margin: 0 auto 3rem;
 }
+
 .more-services__image img {
     width: 100%;
 }
@@ -508,6 +533,75 @@ ul.tags li{
     margin-top: 3rem;
 }
 
+/* Myself */
+#myself {
+    background-image: url('assets/undraw_circuit_board_4c4d.svg');
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-color: var(--secondary-darker-color);
+}
+
+.accordions {
+    margin: 7rem auto 18rem;
+    max-width: 70rem;
+}
+
+.accordion {
+    border-bottom: 1px solid rgba(136, 136, 136, 0.69);
+}
+
+.question {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    cursor: pointer;
+    padding: 2rem 0 1rem;
+}
+
+.question_content {
+    line-height: 3rem;
+    font-weight: 400;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    transition: color 0.3s ease-in-out;
+    margin: 0;
+}
+
+.question_content:hover {
+    color: var(--secondary-color);
+}
+
+.question_arrow {
+    width: 2rem;
+    height: 2rem;
+}
+
+.question_arrow_path {
+    transform-origin: center;
+    transition: stroke .2s ease-in-out, transform .2s ease-in-out;
+}
+
+.question.show-question .question_arrow_path {
+    stroke: var(--secondary-color);
+    transform: rotate(180deg);
+}
+
+.answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .3s ease-in-out;
+}
+
+.answer_content {
+    padding: 1rem 0;
+    opacity: .8;
+}
+
+.show-answer {
+    max-height: 50rem;
+}
 
 /* footer */
 footer {
@@ -515,6 +609,7 @@ footer {
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
+
 .footer-flex {
     display: flex;
     flex-direction: column;
@@ -530,7 +625,7 @@ footer {
     align-items: center;
 }
 
-.footer-details h1{
+.footer-details h1 {
     text-align: center;
     grid-column: 1 / 3;
 }
@@ -559,13 +654,14 @@ footer {
 
 
 @keyframes increaseLine {
-    0%{
-        opacity:0;
-        width:0
+    0% {
+        opacity: 0;
+        width: 0
     }
-    100%{
-        opacity:1;
-        width:14rem
+
+    100% {
+        opacity: 1;
+        width: 14rem
     }
 }
 
@@ -574,6 +670,10 @@ footer {
 @media (min-width: 576px) {
     .intro_image {
         max-width: 550px;
+    }
+
+    #myself {
+        background-size: 60vh;
     }
 }
 
@@ -589,37 +689,42 @@ footer {
     #intro {
         grid-auto-flow: column;
         align-items: center;
-        justify-content:space-around;
+        justify-content: space-around;
         text-align: left;
         margin-top: 8rem;
     }
 
     .intro_image {
         max-width: 100%;
-        order:1;
+        order: 1;
     }
-    .intro_text .subtitle{
-        text-align:left;
+
+    .intro_text .subtitle {
+        text-align: left;
     }
 
     /* Expertise */
     #features article {
-        grid-template-columns: 1fr 2fr; 
+        grid-template-columns: 1fr 2fr;
         column-gap: 2em;
     }
+
     #features article:nth-of-type(even) {
-        grid-template-columns: 2fr 1fr; 
+        grid-template-columns: 2fr 1fr;
     }
 
     article .features_circleimg {
         grid-row: 1 / 3;
     }
+
     article:nth-of-type(even) .features_circleimg {
         grid-column: 2;
     }
+
     article:nth-of-type(odd) .tags {
         grid-column: 2;
     }
+
     .features_body {
         text-align: left;
     }
@@ -633,16 +738,17 @@ footer {
     }
 
     .technologies-cards::after {
-        content:none;
+        content: none;
     }
 
-    .technologies-card:nth-of-type(odd){
+    .technologies-card:nth-of-type(odd) {
         justify-self: start;
     }
 
     .technologies-card:nth-of-type(even) {
         justify-self: end;
     }
+
 }
 
 @media(min-width: 992px) {
@@ -650,6 +756,7 @@ footer {
     #collapse {
         display: none;
     }
+
     .nav-link {
         display: flex;
         column-gap: 2em;
@@ -675,21 +782,24 @@ footer {
         border-bottom: 1px solid rgba(136, 136, 136, 0.69);
         padding: 0 5rem;
     }
+
     .more-services__selectors li {
         border-top: none;
         padding-bottom: 3rem;
     }
+
     .more-services__selectors li:last-of-type {
         border-bottom: none;
     }
 
     .more-services__content {
         display: grid;
-        grid-auto-flow: column; 
+        grid-auto-flow: column;
         grid-template-columns: 55rem 1fr;
         column-gap: 2em;
         text-align: left;
     }
+
     .more-services__image {
         width: 100%;
         margin: 0;
@@ -702,21 +812,22 @@ footer {
 
     .footer-link {
         flex-direction: row;
-        gap:2em;
+        gap: 2em;
     }
 
-    .footer-details h1{
+    .footer-details h1 {
         text-align: left;
     }
 
     @keyframes increaseLine {
-        0%{
-            opacity:0;
-            width:0
+        0% {
+            opacity: 0;
+            width: 0
         }
-        100%{
-            opacity:1;
-            width:24rem
+
+        100% {
+            opacity: 1;
+            width: 24rem
         }
     }
 }
@@ -734,26 +845,28 @@ footer {
         column-gap: 4rem;
         max-width: 110rem;
     }
+
     .technologies-cards::after {
-        content:'';
+        content: '';
         width: 90%;
         height: 1rem;
-        top:14rem;
+        top: 14rem;
         left: 1rem;
     }
 
-    .technologies-card:first-of-type{
-        justify-self:unset;
+    .technologies-card:first-of-type {
+        justify-self: unset;
         align-self: start;
     }
 
-    .technologies-card:nth-of-type(2){
+    .technologies-card:nth-of-type(2) {
         margin-top: 4rem;
-        justify-self:unset;
+        justify-self: unset;
         align-self: start;
     }
-    .technologies-card:nth-of-type(3){
+
+    .technologies-card:nth-of-type(3) {
         margin-top: 8rem;
     }
-    
+
 }
