--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
     }
 
     .container {
-        margin: 1rem 3rem;
+        margin: 1rem 2rem;
         max-width: 1100px;
     }
 
@@ -153,6 +153,11 @@
         position: relative;
     }
 
+    .main-logo{
+        width: 200px;
+        padding: 20px 10px;
+    }
+
     nav {
         display: flex;
         justify-content: space-between;
@@ -168,7 +173,7 @@
         right: 0;
         background-color: var(--main-color);
         line-height: 0.4;
-        padding: 0 4rem;
+        padding: 0 2rem;
         z-index: 10;
         box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.70);
     }
@@ -775,9 +780,10 @@
         align-items: center;
     }
 
-    .footer-details h1 {
+    .footer-details .main-logo {
         text-align: center;
         grid-column: 1 / 3;
+        padding: 15px 0; 
     }
 
     .footer-details svg {
@@ -847,23 +853,6 @@
 
         
 
-        #intro {
-            grid-auto-flow: column;
-            align-items: center;
-            justify-content: space-around;
-            text-align: left;
-            margin-top: 8rem;
-        }
-
-        .intro_image {
-            max-width: 100%;
-            order: 1;
-        }
-
-        .intro_text .subtitle {
-            text-align: left;
-        }
-
         /* Expertise */
         #features article {
             grid-template-columns: 1fr 2fr;
@@ -921,6 +910,31 @@
         .nav-link {
             display: flex;
             column-gap: 2rem;
+        }
+
+        .main-logo{
+            width: 250px;
+        }
+
+        nav.active {
+            padding: 0 4rem;
+        }
+
+        #intro {
+            grid-auto-flow: column;
+            align-items: center;
+            justify-content: space-around;
+            text-align: left;
+            margin-top: 15rem;
+        }
+
+        .intro_image {
+            max-width: 100%;
+            order: 1;
+        }
+
+        .intro_text .subtitle {
+            text-align: left;
         }
 
         .languages {
